# The-Citadel-of-Chaos

./: .gitignore  AUTHORS  ChangeLog  README.md  setup.cfg  tox.ini
The_Citadel_of_Chaos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  pbr.json  top_level.txt
tcoc/: hero.py
tcoc/tests/: test_hero.py
