[metadata]
name = The Citadel of Chaos
version = 0.0.1
author = Joe H. Rahme
author-email = joehakimrahme@gmail.com
summary = A digital implementation of The Citadel of Chaos
description-file = README.md
license = Apache-2
classifier =
    Development Status :: 3 - Alpha
    Environment :: Game
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    tcoc

[entry_points]
tcoc =
    hero = tcoc.hero

